--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,15 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
+        }
+    }
+
+    sourceSets{
+        main{
+            jniLibs.srcDirs =['libs']
+        }
     }
 
     buildTypes {
@@ -24,15 +33,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-
-    implementation  'com.github.kongqw:AndroidSerialPort:1.0.1'
-    implementation  'com.github.yhaolpz:FloatWindow:1.0.9'
+    implementation 'com.github.kongqw:AndroidSerialPort:1.0.1'
+    implementation 'com.github.yhaolpz:FloatWindow:1.0.9'
+    implementation files('libs/Msc.jar')
 }
