--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.github.kongqw:AndroidSerialPort:1.0.1'
     implementation 'com.github.yhaolpz:FloatWindow:1.0.9'
     implementation files('libs/Msc.jar')
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
