配置签名文件,暂时使用小厨在家签名

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,21 @@ android {
         }
     }
 
+    signingConfigs {
+        debug_config {
+            keyAlias 'kitchen diary'
+            keyPassword '53iqkitchen'
+            storeFile file('../sign/kitchen_diary.jks')
+            storePassword '53iqkitchen'
+        }
+        release_config {
+            keyAlias 'kitchen diary'
+            keyPassword '53iqkitchen'
+            storeFile file('../sign/kitchen_diary.jks')
+            storePassword '53iqkitchen'
+        }
+    }
+
 }
 
 dependencies {
